--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="style.css">
+  <link rel="style.css"></link>
 <title>Title</title>
 </head>
 <body></body>
