--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="style.css"></link>
-<title>Title</title>
-</head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Title</title>
+  </head>
 <body></body>
 </html>
